--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.3.0",
+    "@vitejs/plugin-vue-jsx": "^1.1.7",
     "@vue/compiler-sfc": "^3.0.5",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vite-plugin-style-import": "^1.1.1",
     "vue-tsc": "^0.2.2"
   }
 }
