--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vitejs/plugin-vue": "^1.3.0",
     "@vitejs/plugin-vue-jsx": "^1.1.7",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.3.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
     "vite-plugin-style-import": "^1.1.1",
