--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "sass": "^1.38.0",
     "vant": "^3.2.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@types/node": "^16.6.2",
     "@vitejs/plugin-vue": "^1.3.0",
     "@vitejs/plugin-vue-jsx": "^1.1.7",
     "@vue/compiler-sfc": "^3.0.5",
