--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.21.1",
     "sass": "^1.38.0",
     "vant": "^3.2.0",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@types/node": "^16.6.2",
